--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Check for check-in on a headless chrome browser",
   "main": "index.js",
   "scripts": {
-    "run": "node ./index.js",
+    "start": "node ./index.js",
     "test": "node ./test.js"
   },
   "author": "Ismail Bella",
