--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ismail Bella",
   "license": "ISC",
   "dependencies": {
+    "node-notifier": "^6.0.0",
     "puppeteer": "^2.1.1",
     "twilio": "^3.39.4"
   }
